@@ -1,18 +1,19 @@
 package es.upm.miw.apawpractice.adapters.mongodb.shop.daos;
 
-import es.upm.miw.apawpractice.TestConfig;
 import es.upm.miw.apawpractice.adapters.mongodb.shop.entities.ArticleEntity;
 import es.upm.miw.apawpractice.adapters.mongodb.shop.entities.TagEntity;
 import org.junit.jupiter.api.Test;
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.boot.test.context.SpringBootTest;
+import org.springframework.test.context.ActiveProfiles;
 
 import java.util.Arrays;
-import java.util.stream.Collectors;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertTrue;
 
-@TestConfig
+@SpringBootTest
+@ActiveProfiles("test")
 class TagRepositoryIT {
 
     @Autowired
@@ -26,7 +27,7 @@ class TagRepositoryIT {
         assertEquals("tag 2", tag.getDescription());
         assertTrue(tag.getArticleEntities().stream()
                 .map(ArticleEntity::getBarcode)
-                .collect(Collectors.toList())
+                .toList()
                 .containsAll(Arrays.asList("84001", "84004")));
         assertTrue(tag.getFavourite());
 
