@@ -1,18 +1,19 @@
 package es.upm.miw.apawpractice.adapters.mongodb.shop.persistence;
 
-import es.upm.miw.apawpractice.TestConfig;
 import es.upm.miw.apawpractice.domain.models.shop.Article;
 import es.upm.miw.apawpractice.domain.models.shop.Tag;
 import org.junit.jupiter.api.Test;
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.boot.test.context.SpringBootTest;
+import org.springframework.test.context.ActiveProfiles;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertTrue;
 
-@TestConfig
+@SpringBootTest
+@ActiveProfiles("test")
 class TagPersistenceMongodbIT {
 
     @Autowired
@@ -26,7 +27,7 @@ class TagPersistenceMongodbIT {
         assertEquals(2, tag.getArticles().size());
         assertTrue(tag.getArticles().stream()
                 .map(Article::getBarcode)
-                .collect(Collectors.toList())
+                .toList()
                 .containsAll(List.of("84001", "84004")));
     }
 
